Fixed CSS and team card alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,12 @@
     
 }
 
+body {
+    background-color:rgb(63, 32, 94);
+    ;
+
+}
+
 .collection {
 
  padding: 0px 0px !important;
@@ -33,17 +39,52 @@ li{
     min-width: 610px !important;
 }
 
+.row {
+   
+    /* display: flex !important; */
+    /* flex-wrap: wrap !important;
+    text-align: left !important; */
+ margin: 0px 0px 0px 0px !important;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .col {
 
    padding: 4px 0px 4px 0px !important;
+   /* display: table !important; */
 
 }
 
+.row .col {
+    float: right !important;
+}
+
+/* .row>[class*='col-'] {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+} */
+
 .border {
-   border-bottom:  solid;
+   border:  solid;
     border-color: rebeccapurple;
 
 }
+
+ .plate {
+     border: solid;
+     border-color: rebeccapurple;
+     height: fit-content;
+     border-radius: 25px;
+     margin-top: 20px;
+     margin-bottom: 20px;
+     padding: 20px 20px 20px 20px;
+     background-color: white;
+ }
 
 .team-Box-Icon {
     /* border: 1px solid #ddd; */
@@ -58,7 +99,7 @@ li{
 
 .team-Box-Name {
     font-weight: bolder;
-    font-size:4vh !important;
+    font-size:100% !important;
     padding: 4px !important;
     
     object-fit:contain !important;
@@ -77,6 +118,7 @@ li{
 
 .sport-header {
      font-weight: bolder;
+     color: white
 }
 
 th {
@@ -88,17 +130,18 @@ td {
     text-align: left;
     padding: 4px 0px 4px 0px !important;
 }
-.row {
-    margin: 0px !important;
 
-
-}
 
 #newsFeed{
     padding-left: 20px;
 }
 
+.h4 {
 
+    margin: 0px 0px 0px 0px !important;
+    color:violet !important;
+
+}
 
 /* vh03 adjust size for class nflDiv-dropdown menu */
 /* #teamImg {
